tests/ui/resolve/export-fully-qualified.stderr
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `foo`
  --> $DIR/export-fully-qualified.rs:8:20
   |
LL |     pub fn bar() { foo::baz(); }
   |                    ^^^ use of unresolved module or unlinked crate `foo`
   |
   = help: if you wanted to use a crate named `foo`, use `cargo add foo` to add it to your `Cargo.toml`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
